# rboard

./: Cargo.toml  LICENSE  clip_data.db  readme.md
src/: backend.rs  main.rs  tray.rs  ui.rs
