[package]
name = "rboard"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
eframe = "0.34.1"
egui = "0.34.1"
gtk = "0.18.2"
hex = "0.4.3"
home = "0.5.12"
image = { version = "0.25.10", default-features = false, features = ["png"] }
rdev = "0.5.3"
rusqlite = {version = "0.39.0", features = ["bundled"]}
sha2 = "0.11.0"
tao = "0.35.0"
tray-icon = "0.22.1"
